--- a/index.html
+++ b/index.html
@@ -186,24 +186,16 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/study.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>   </h4>
                                 <h4>不限時、唸書專區</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">test test</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/friend.jpeg
-                        " alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/friend.jpeg " alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>
-                                
-                                <br />
-                                聚會、歡聚專區
-                                <br />
-                                
-                            </h4>
+                                <h4>聚會、歡聚專區</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">test test</p></div>
                         </div>
@@ -214,6 +206,7 @@
                             <div class="timeline-heading">
                                 <h4>早午餐專區</h4>
                             </div>
+                            <div class="timeline-body"><p class="text-muted">test test</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
