--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                             <div class="timeline-heading">
                                 <h4>不限時、唸書專區</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">test test</p></div>
+                            <div class="timeline-body"><p class="text-muted">
+                            <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
+                            </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -213,10 +215,9 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2020</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                                <h4>拍照打卡專區</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                            <div class="timeline-body"><p class="text-muted">test test</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
