--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" align="absmiddle" alt="暫無圖片" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/brunch/jpeg" align="absmiddle" alt="暫無圖片" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>早午餐專區</h4>
