--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/friend.jpeg " alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/friend.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>聚會、歡聚專區</h4>
@@ -203,7 +203,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/brunch/jpeg" align="absmiddle" alt="暫無圖片" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/brunch/jpeg" alt="暫無圖片" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>早午餐專區</h4>
