--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Service</h2>
+                    <h2 class="section-heading text-uppercase">About</h2>
                     <h3 class="section-subheading text-muted">我們提供的服務</h3>
                 </div>
                 <div class="row text-center">
