--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">
-                        Copyright &copy; Your Website
+                        Copyright &copy; Blue Cafe
                         <!-- This script automatically adds the current year to your website footer-->
                         <!-- (credit: https://updateyourfooter.com/)-->
                         <script>
