--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="liu" />
                             <h4>Shanglin Liu</h4>
                             <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://shanglin0421.github.io/"><i class="fab fa-github"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/melissa.liu.96558"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://shanglin0421.github.io/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
