--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                                 <div class="portfolio-hover">
@@ -143,7 +143,6 @@
                             </div>
                         </div>
                     </div>
-                    
                     </div>
                 </div>
             </div>
