--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                                 <div class="portfolio-hover">
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                    <div class="col-lg-4 col-sm-6 mb-4f mb-lg-0">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                                 <div class="portfolio-hover">
@@ -226,7 +226,7 @@
                     <div class="col-lg-4">
                     <div class="content">
                         <div class="team-member">
-                        <div class="center">
+                        <div class="margin: 20px auto;"
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="liu" />
                             <h4>Shanglin Liu</h4>
                             <p class="text-muted">Lead Designer</p>
