--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="col-lg-4">
                     <div class="content">
                         <div class="team-member">
-                        <div class="center">
+                        <div class=".center">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="liu" />
                             <h4>Shanglin Liu</h4>
                             <p class="text-muted">Lead Designer</p>
