--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Here!</div>
+                <div class="masthead-subheading">Gathering cafes around Bannan Line</div>
                 <div class="masthead-heading text-uppercase">Blue Cafe</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
             </div>
