--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
                 </div>
-                <div class="row">
+                <div class="container">
                     <div class="col-lg-4">
                     <div class="content">
                     <div class="container">
