--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Blue Cafe</div>
+                <h4>Weilcome Here!</h4>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
             </div>
         </header>
