--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Blue Cafe</div>
-                <h4>Weilcome Here!</h4>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
             </div>
         </header>
@@ -138,7 +137,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">版橋-土城</div>
+                                <div class="portfolio-caption-heading">板橋-土城</div>
                                 <div class="portfolio-caption-subheading text-muted">亞東醫院站-頂埔站</div>
                             </div>
                         </div>
@@ -196,6 +195,17 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>拍照打卡專區</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">
+                            <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
+                            </p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/brew.jpeg" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>咖啡老饕專區</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
