--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
                             </p></div>
                         </div>
                     </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/brew.jpeg" alt="..." /></div>
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/brew.jpeg" alt="暫無圖片" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>咖啡老饕專區</h4>
+                                <h4>老饕專區</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
                             <p>  南港站 <a href="coppii.html" target="_parent">Coppii Lumii Living Coffee</a></p>
