--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/brew.jpeg" alt="暫無圖片" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/boss.jpeg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>老饕專區</h4>
