--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             <p class="text-muted">Lead Designer</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://shanglin0421.github.io/"><i class="fab fa-github"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/melissa.liu.96558"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://shanglin0421.github.io/"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/liuuu_421/"><i class="fab fa-instagram-square"></i></a>
                         </div>
                       </div>
                     </div>
