--- a/index.html
+++ b/index.html
@@ -232,10 +232,9 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
                 </div>
-                <div class="container">
+                <div class="center">
                     <div class="col-lg-4">
                     <div class="content">
-                    <div class="container">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="liu" />
                             <h4>Shanglin Liu</h4>
