--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                
+                                in
                                 <br />
-                                開發中...
+                                development
                                 <br />
-                                
+                                ...
                             </h4>
                         </div>
                     </li>
