--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                in
+                                
                                 <br />
-                                development
+                                開發中...
                                 <br />
-                                ...
+                                
                             </h4>
                         </div>
                     </li>
