--- a/index.html
+++ b/index.html
@@ -249,6 +249,18 @@
                 </div>
                 </div>
             </div>
+        <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h3 class="section-subheading text-muted">我們提供的服務</h3>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Choice</h4>
+                        <p class="text-muted">分成四大類型，可以輕鬆找到符合需求的店家，無論是有工作、娛樂等需求的，這裡都能滿足你。</p>
+                    </div>
         </section>
 
         <!-- Contact-->
