--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-info fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Feature</h4>
                         <p class="text-muted">客製化資訊：依照不同風格提供專屬對應的資訊。</p>
