--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-clone fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-bars fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Theme</h4>
                         <p class="text-muted">整理了板南線捷運站周邊的咖啡廳，讓沒有交通工具的你也能享受到咖啡廳的美好！</p>
@@ -225,6 +225,8 @@
                     </li>
                 </ul>
             </div>
+            <div style="border-width: 3px ; width: 150px; height: 30px ; padding: 5px; text-align: center; background-color: rgb(41, 105, 176, 0.7);border-radius: 4px;">
+             <span style="color: rgb(255, 255, 255);">測試邊框樣式</span></div>
         </section>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
