--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     </li>
                 </ul>
             </div>
-            <div class=center>
+            <div class="center">
             <div style="border-width: 3px ; width: 150px; height: 30px ; padding: 5px; text-align: center; background-color: rgb(41, 105, 176, 0.7);border-radius: 4px;">
              <span style="color: rgb(255, 255, 255);">測試邊框樣式</span></div>
              </div>
