--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
              </div>
              <input type="text" style="font-size:13px;font-family:serif;padding:6px;" value="修改文字欄位整合寫法">
              </div>
+             
+             <div class="portfolio-caption">
+              <div class="portfolio-caption-subheading text-muted">213系列濃縮可可與核果的香氣</div>
+              </div>
+              
         </section>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
