--- a/index.html
+++ b/index.html
@@ -232,17 +232,12 @@
              <div>
              <pre>
              <code class="language-html hljs xml">
-             <span>我是...</span>
+             <span>好想要揮霍-歌詞-我穿戴整齊面對瘋狂的世界不管今天面對誰微笑是必須就算妳不在意我微笑的原因是我僅有的自信我慌亂面對你轉身離開不管</span>
              </code>
              </pre>
              </div>
              <input type="text" style="font-size:13px;font-family:serif;padding:6px;" value="修改文字欄位整合寫法">
              </div>
-             
-             <div class="portfolio-caption">
-              <div class="portfolio-caption-subheading text-muted">213系列濃縮可可與核果的香氣</div>
-              </div>
-              
         </section>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
