--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
              <div>
              <pre>
              <code class="language-html hljs xml">
-             <span>好想要揮霍-歌詞-我穿戴整齊面對瘋狂的世界不管今天面對誰微笑是必須就算妳不在意我微笑的原因是我僅有的自信我慌亂面對你轉身離開不管</span>
+             <span>我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原因 是我僅有的自信 我慌亂面對你轉身離開 不管未來 快樂 是不是 我的必須品 我只能 再一次 安靜作好準備 妳下一次出現 總在午夜夢醒 家徒四壁 是甚麼包圍空虛 好想把我的 全部都給你 一個人 多平凡 的期許 總在人潮散去 瞬間覺醒 全身力氣得不到安寧 從不曾揮霍 好想要揮霍 好讓明天繼續 我慌亂面對你轉身離開 不管未來 快樂 是不是 我的必須品 也許早已否定 我所有的努力 愛已不會降臨</span>
              </code>
              </pre>
              </div>
