--- a/coppii.html
+++ b/coppii.html
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_2.jpeg" alt="coppii_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">小法國</div>
+                                <div class="portfolio-caption-subheading text-muted">冉冉大早餐-小法國 $318</div>
                             </div>
                         </div>
                     </div>
