--- a/coppii.html
+++ b/coppii.html
@@ -65,11 +65,17 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_3.jpeg" alt="coppii_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">213系列濃縮可可與核果的香氣</div>
+                                <div class="portfolio-caption-subheading text-muted">213系列-標準深烘帶著核果香，飽滿濃郁</div>
                             </div>
                         </div>
                     </div>
              </section>
+                <div class="text-center">
+                    <h4>About us</h4>
+                    <p> <mark class="gray">我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原</mark>
+                    <p> <mark class="gray">我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原</mark>
+                </div>
+                
                    <div class="text-center">
                            <p>地址：台北市南港區經貿二路196-1號</p>
                            <p>電話：(02)2789-1816</p>
