--- a/coppii.html
+++ b/coppii.html
@@ -72,8 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原</mark>
-                    <p> <mark class="gray">我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原</mark>
+                    <p> <mark class="gray">我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原</mark>
                 </div>
                 
                    <div class="text-center">
