--- a/coppii.html
+++ b/coppii.html
@@ -72,7 +72,10 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原我穿戴整齊面對 瘋狂的 世界 不管今天 面對誰 微笑是必須 就算妳不在意 我微笑的原</mark>
+                    <p> <mark class="gray">我們想要提供新鮮好吃的早餐，家常且舒服的暖食，
+                    你想要位朋友外帶杯咖啡，約了久違的同學且自然的分享彼此剛上桌的甜點。
+                    一竊都將發生在這，想要貼近你的生活。
+                    Coppii Lumii期待為你成就很棒的事！</mark>
                 </div>
                 
                    <div class="text-center">
