--- a/coppii.html
+++ b/coppii.html
@@ -79,6 +79,7 @@
                 </div>
                 
                    <div class="text-center">
+                           <h4>Information</h4>
                            <p>地址：台北市南港區經貿二路196-1號</p>
                            <p>電話：(02)2789-1816</p>
                            <p>營業時間：9:00-21:00</p>
