--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Blue Cafe</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">瞭解更多</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn more</a>
             </div>
         </header>
         <!-- About-->
