--- a/coppii.html
+++ b/coppii.html
@@ -91,5 +91,5 @@
                            </br>
                            
                            </br>
-                           <a href="https://shanglin0421.github.io/coffee/"><img src="assets/img/start.png"></a>
+                           <a href="https://shanglin0421.github.io/coffee/"><img src="assets/img/start.png" width="70" height="30"></a>
                  </div>
