--- a/coppii.html
+++ b/coppii.html
@@ -93,6 +93,6 @@
                            </br>
                            
                            </br>
-                           <p>Back to Home Page</p>
+                           <div class="portfolio-caption-subheading text-muted">Back to Home Page</div>
                            <a href="https://shanglin0421.github.io/coffee/"><img src="assets/img/start.png" width="70" height="30"></a>
                  </div>
