--- a/backmount.html
+++ b/backmount.html
@@ -38,7 +38,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_1.jpeg" alt="bm_1" />
+                                <img class="img-fluid" src="assets/img/store/bm_1.jpeg" alt="bm_1" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">酪梨大早餐 $350</div>
@@ -50,7 +50,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_2.jpeg" alt="bm_2" />
+                                <img class="img-fluid" src="assets/img/store/bm_2.jpeg" alt="bm_2" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">------</div>
@@ -62,7 +62,7 @@
                             <a class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/coppii_3.jpeg" alt="bm_3" />
+                                <img class="img-fluid" src="assets/img/store/bm_3.jpeg" alt="bm_3" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">--------</div>
@@ -72,7 +72,7 @@
              </section>
                 <div class="text-center">
                     <h4>About us</h4>
-                    <p> <mark class="gray">我們想要提供新鮮好吃的早餐，家常且舒服的暖食，你會想要為朋友外帶杯咖啡，約了久違的同學且自然的分享彼此剛上桌的甜點。一切都將發生在這，想要貼近你的生活。Coppii Lumii期待為你成就很棒的事！</mark>
+                    <p> <mark class="gray">我們</mark>
                     </br>
                     
                     </br>
