--- a/backmount.html
+++ b/backmount.html
@@ -26,8 +26,8 @@
                     <h3 class="section-subheading text-muted">隱藏在寧靜社區的質感咖啡廳</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
+                    <p> <mark class="yellow">＃平日不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃戶外寵物友善</mark></p>
                     <p> <mark class="blue">Covid-19專區：僅提供外帶，暫停內用服務，所有品項皆可外帶/外送</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/bm_2.jpeg" alt="bm_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">------</div>
+                                <div class="portfolio-caption-subheading text-muted">【Piccolo 短笛】從澳洲紅到全世界的咖啡，高濃度帶來更強烈的口感，喜愛濃郁的你一定要試試！</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                                 <img class="img-fluid" src="assets/img/store/bm_3.jpeg" alt="bm_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">--------</div>
+                                <div class="portfolio-caption-subheading text-muted">清新簡約純白風</div>
                             </div>
                         </div>
                     </div>
