--- a/backmount.html
+++ b/backmount.html
@@ -53,7 +53,7 @@
                                 <img class="img-fluid" src="assets/img/store/bm_2.jpeg" alt="bm_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">【Piccolo 短笛】高濃度帶來更強烈的口感，喜愛濃郁的你一定要試試！</div>
+                                <div class="portfolio-caption-subheading text-muted">【Piccolo 短笛】喜愛濃郁的你一定要試試！</div>
                             </div>
                         </div>
                     </div>
